--- a/css/achievements.css
+++ b/css/achievements.css
@@ -32,6 +32,7 @@ table {
     border-collapse: collapse;
     width: 90%;
     box-shadow: 0 0 5px #333;
+    margin: 70px 0px 70px 0px !important;
 }
 
 td,
