--- a/css/index.css
+++ b/css/index.css
@@ -211,80 +211,35 @@ nav {
 }
 
 
-/* Photo effects*/
+/* =============== Image Gallery ================= */
 
-.image {
-    width: 500px;
-    height: 300px;
-    background-size: cover;
-    background-position: center;
-    margin: 10px;
-    float: left;
-    position: relative;
-    overflow: hidden;
-    -webkit-backface-visibility: hidden;
+.image-gallery {
+    min-height: 800px;
+    margin-left: 250px;
 }
 
-.image a {
-    opacity: 0;
-    transition: .2s;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
-    position: relative;
-    z-index: 2;
-    color: white;
-    text-transform: uppercase;
-    margin: 0;
-    text-align: center;
-    line-height: 300px;
+.gallery-group {
     display: flex;
-    justify-content: center;
     flex-direction: row;
-    text-decoration: none;
-    /* border: 3px solid white; */
-    /* padding: 10px; */
-    font-size: 1.4rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding-top: 100px;
 }
 
-.image:after,
-.image:before {
-    opacity: 0;
-    transition: .2s;
-    content: "";
-    background-image: inherit;
-    background-size: inherit;
-    background-position: inherit;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    -webkit-filter: blur(90px) saturate(4);
-    filter: blur(90px) saturate(4);
+.image-gallery .gallery-item img {
+    max-width: 450px;
+    height: auto;
+    transition: all .2s ease-in-out;
 }
 
-@media all and (-ms-high-contrast: none),
-(-ms-high-contrast: active) {
-    .image:after,
-    .image:before {
-        background-image: none;
-        background-color: rgba(0, 0, 0, 0.5);
-    }
-}
-
-.image:hover a,
-.image:hover:after,
-.image:hover:before {
-    opacity: 1;
-}
-
-.hover .image a,
-.hover .image:after,
-.hover .image:before {
-    opacity: 1;
+.image-gallery .gallery-item img:hover {
+    transform: scale(1.1);
+    border: 2px #fb8c00 solid;
 }
 
 
-/*End phjto effects*/
+/* =============== Image Gallery ================= */
 
 
 /* Start Contact Page */
