--- a/css/index.css
+++ b/css/index.css
@@ -61,8 +61,9 @@ nav {
 #cssmenu>ul>li>a {
     padding: 10px;
     display: block;
-    font-size: 1rem;
-    font-weight: 300;
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: #151623;
 }
 
 #cssmenu>ul>li>a:hover {
@@ -211,11 +212,85 @@ nav {
 }
 
 
+/* ===============Some Text Block ================ */
+
+.some-text-block {
+    margin-left: 250px;
+    padding-top: 100px;
+}
+
+.some-text-block .container {
+    padding: 0px 25px 0px 25px;
+}
+
+.blocks-group {
+    display: flex;
+    justify-content: space-around;
+}
+
+.left-side-block,
+.right-side-block {
+    display: flex;
+}
+
+.some-text-block h1 {
+    font-size: 5rem;
+    font-weight: 900;
+    color: #fb8c00;
+}
+
+.some-text-block h3 {
+    font-size: 3rem;
+    font-weight: 900;
+    color: #151623;
+    margin: 0;
+    text-transform: uppercase;
+    padding-top: -39px;
+    margin-top: -13px;
+}
+
+.some-text p:nth-child(3) {
+    font-size: 1.3rem;
+    color: #151623;
+    font-weight: 600;
+}
+
+.some-text a {
+    background-color: #fb8c00;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 10px;
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+
+.some-text a:hover {
+    border: 2px #fb8c00 solid;
+    background-color: #fff;
+    color: #fb8c00;
+}
+
+.up-header {
+    margin: 0;
+    padding-top: 36px;
+    text-transform: uppercase;
+    font-size: 1.rem;
+    font-weight: 700;
+    color: #fb8c00;
+}
+
+
+/* ===============Some Text Block ================ */
+
+
 /* =============== Image Gallery ================= */
 
 .image-gallery {
     min-height: 800px;
     margin-left: 250px;
+    margin-top: -185px;
+    margin-bottom: 50px;
 }
 
 .gallery-group {
@@ -236,6 +311,7 @@ nav {
 .image-gallery .gallery-item img:hover {
     transform: scale(1.1);
     border: 2px #fb8c00 solid;
+    box-shadow: 0 0 5px #fb8c00;
 }
 
 
@@ -447,6 +523,7 @@ a.send-btn:hover {
 }
 
 #contact {
+    margin-left: 250px;
     min-height: 500px;
     background-color: #fafafa;
 }
