--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,6 @@ nav {
 }
 
 img.logo {
-    padding-left: 30%;
     padding-top: 50%;
 }
 
@@ -50,6 +49,7 @@ img.logo {
 }
 
 #cssmenu {
+    text-align: center;
     width: 250px;
     margin-top: 70%;
 }
@@ -220,8 +220,8 @@ img.logo {
 /* ===============Some Text Block ================ */
 
 .some-text-block {
+    height: 515px;
     margin-left: 250px;
-    padding-top: 100px;
 }
 
 .some-text-block .container {
@@ -265,8 +265,8 @@ img.logo {
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
-    padding: 10px;
-    font-size: 1.4rem;
+    padding: 5px;
+    font-size: 1.2rem;
     font-weight: 700;
 }
 
@@ -279,6 +279,7 @@ img.logo {
 .up-header {
     margin: 0;
     padding-top: 36px;
+    padding-bottom: 10px;
     text-transform: uppercase;
     font-size: 1.rem;
     font-weight: 700;
@@ -292,10 +293,9 @@ img.logo {
 /* =============== Image Gallery ================= */
 
 .image-gallery {
-    min-height: 800px;
+    min-height: 675px;
     margin-left: 250px;
     margin-top: -185px;
-    margin-bottom: 50px;
 }
 
 .gallery-group {
@@ -304,7 +304,6 @@ img.logo {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding-top: 100px;
 }
 
 .image-gallery .gallery-item img {
@@ -530,7 +529,7 @@ a.send-btn:hover {
 #contact {
     margin-left: 250px;
     min-height: 500px;
-    background-color: #fafafa;
+    background-color: #f1f1f1;
 }
 
 .panel-content {
@@ -546,6 +545,7 @@ a.send-btn:hover {
 /* start footer */
 
 footer {
+    padding-left: 200px;
     width: 100%;
     height: 200px;
     background-color: #fb8c00;
