--- a/css/w3.css
+++ b/css/w3.css
@@ -19,7 +19,8 @@ html {
 }
 
 body {
-    margin: 0
+    margin: 0;
+    background-color: #fafafa !important;
 }
 
 .w3-sidebar a {
@@ -241,7 +242,7 @@ textarea {
 
 html,
 body {
-    font-family: Verdana, sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 15px;
     line-height: 1.5
 }
