--- a/css/projects.css
+++ b/css/projects.css
@@ -126,11 +126,11 @@
 
 @media screen and (max-width: 600px) {
     .banner {
-        margin-top: 84px;
-        height: 200px;
+        margin-top: 84px !important;
+        height: 200px !important;
     }
     .banner h1 {
-        font-size: 2rem;
+        font-size: 2rem !important;
     }
 }
 
