--- a/css/achievements.css
+++ b/css/achievements.css
@@ -93,6 +93,18 @@ tr:nth-child(even) {
     background-color: #f1f1f1;
 }
 
+@media screen and (min-width: 480px) and (max-width: 600px) {
+    .banner h1 {
+        font-size: 2rem !important;
+    }
+}
+
+@media screen and (max-width: 479px) {
+    .banner h1 {
+        font-size: 1.4rem !important;
+    }
+}
+
 @media screen and (max-width: 600px) {
     table {
         display: block;
@@ -102,8 +114,5 @@ tr:nth-child(even) {
     .banner {
         margin-top: 84px !important;
         height: 200px !important;
-    }
-    .banner h1 {
-        font-size: 2rem !important;
     }
 }
